arithmetic.g4
grammar arithmetic;

function
   : multiplyingExpression ((ADD | SUBTRACT) multiplyingExpression)*
   ;

multiplyingExpression
   : atom ((MULTIPLY | DIVIDE) atom)*
   ;

atom
    : number
    | variable
    | boolean_value
    ;

variable
    : VARIABLE
    ;

number
    : NUMBER
    ;

boolean_value
    : BOOL
    ;

/* Lexer rules */
NUMBER : [0-9]+ ;
BOOL : 'TRUE'|'true'|'True'|'FALSE'|'false'|'False' ;
VARIABLE : [a-zA-Z] ;
ADD : '+' ;
SUBTRACT : '-' ;
MULTIPLY : '*' ;
DIVIDE : '/' ;
POWER : '^' ;
LBRACKET : '(' ;
RBRACKET : ')' ;
AND : '&' ;
OR : '|' ;
GT : '>' ;
LT : '<' ;
EQ : '==' ;

WS : [ \t\r\n]+ -> skip ;

// /*
// BSD License
// Copyright (c) 2013, Tom Everett
// All rights reserved.
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions
// are met:
// 1. Redistributions of source code must retain the above copyright
//    notice, this list of conditions and the following disclaimer.
// 2. Redistributions in binary form must reproduce the above copyright
//    notice, this list of conditions and the following disclaimer in the
//    documentation and/or other materials provided with the distribution.
// 3. Neither the name of Tom Everett nor the names of its contributors
//    may be used to endorse or promote products derived from this software
//    without specific prior written permission.
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
// */

// grammar arithmetic;

// function
//     : function relop function
//     | function (AND | OR) function
//     | function POWER function
//     | function (MULTIPLY | DIVIDE) function
//     | function (ADD | SUBTRACT) function
//     | LBRACKET function RBRACKET
//     | (ADD | SUBTRACT)* atom
//     ;

// atom
//     : number
//     | variable
//     | boolean_value
//     ;

// variable
//     : VARIABLE
//     ;

// number
//     : NUMBER
//     ;

// boolean_value
//     : BOOL
//     ;

// relop
//     : EQ
//     | GT
//     | LT
//     ;

// /* Lexer rules */
// NUMBER : [0-9]+ ;
// BOOL : 'TRUE'|'true'|'True'|'FALSE'|'false'|'False' ;
// VARIABLE : [a-zA-Z] ;
// ADD : '+' ;
// SUBTRACT : '-' ;
// MULTIPLY : '*' ;
// DIVIDE : '/' ;
// POWER : '^' ;
// LBRACKET : '(' ;
// RBRACKET : ')' ;
// AND : '&' ;
// OR : '|' ;
// GT : '>' ;
// LT : '<' ;
// EQ : '==' ;

// WS : [ \t\r\n]+ -> skip ;
